# pifu

./: Cargo.toml  README.md
.github/workflows/: rust.yml
ci/: Makefile
docs/: book.toml  linux.md
docs/src/: SUMMARY.md  linux.md
examples/: AppRun  README.md  empty-script.nsi  hello.desktop  hello.rs  pifu.toml  qrbox.toml  rs-builder.toml  use-pattern.rs
nsis/: hello.go  intro-2.nsi  intro-user.nsi  intro.nsi
pkg/: AppRun  pifu.desktop  pifu.toml
src/: build.rs  build_linux.rs  cmdline.rs  config.rs  download-list.toml  download.rs  error.rs  lib.rs  main.rs
src/app_image/: build.rs  config.rs  mod.rs
src/base/: archive.rs  compress.rs  config.rs  file_pattern.rs  fileset.rs  hash.rs  mod.rs  utils.rs
src/deb/: build.rs  config.rs  control.rs  mod.rs
src/nsis/: build.rs  config.rs  mod.rs
src/rpm/: build.rs  config.rs  mod.rs
