[package]
name = "pifu"
version = "0.3.4"
edition = "2021"
authors = ["Xu Shaohua <shaohua@biofan.org"]
repository = "https://github.com/PifuProject/pifu"
readme = "README.md"
license = "GPL-3.0"
description = "Cross platform package build tool"
categories = [
  "development-tools::build-utils"
]
keywords = [
  "build-utils",
  "packaging",
]
rust-version = "1.62.0"

[dependencies]
ar = "0.9.0"
clap = "4.0.32"
colored = "2.0.2"
directories = "5.0.1"
env_logger = "0.10.0"
flate2 = "1.0.27"
fs_extra = "1.3.0"
glob = "0.3.1"
hex = "0.4.3"
log = "0.4.20"
md5 = "0.7.0"
num_cpus = "1.16.0"
regex = "1.9.4"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
tar = "0.4.40"
time = { version = "0.3.19", features = ["alloc", "formatting", "local-offset", "parsing"] }
toml = "0.7.3"
walkdir = "2.3.3"
xz2 = "0.1.7"

[profile.release]
lto = true
opt-level = 3
debug = false

[features]
