[package]
name = "pifu"
version = "0.3.5"
edition = "2024"
authors = ["Xu Shaohua <shaohua@biofan.org"]
repository = "https://github.com/RustRobotics/pifu"
readme = "README.md"
license = "GPL-3.0"
description = "Cross platform package build tool"
categories = [
  "development-tools::build-utils"
]
keywords = [
  "build-utils",
  "packaging",
]
rust-version = "1.85.0"

[dependencies]
ar = "0.9.0"
clap = "4.5.39"
colored = "3.0.0"
directories = "6.0.0"
env_logger = "0.11.8"
flate2 = "1.1.1"
fs_extra = "1.3.0"
glob = "0.3.2"
# h2=0.3.24 is included to bypass security warning.
# See https://rustsec.org/advisories/RUSTSEC-2024-0003
h2 = "0.4.10"
hex = "0.4.3"
log = "0.4.27"
md5 = "0.7.0"
num_cpus = "1.17.0"
regex = "1.11.1"
reqwest = { version = "0.12.18", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tar = "0.4.44"
time = { version = "0.3.41", features = ["alloc", "formatting", "local-offset", "parsing"] }
toml = "0.8.22"
walkdir = "2.5.0"
xz2 = "0.1.7"

[profile.release]
lto = true
opt-level = 3
debug = false

[features]
